syntax = "proto3";

package wallets.v1;

message CreateWalletResponseMessage {
  string wallet_uuid = 1;
}
